--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    @apply transition-colors duration-200
+}
+
 @font-face {
     font-family: 'Fondamento';
     src: url('./assets/fonts/Fondamento-Regular.ttf') format('.ttf');
